# RL

./: .gitignore  .pypirc  404.html  LICENSE.txt  README.md  __init__.py  example.py  index.html  main.py  mkdocs.yml  objects.inv  real_api.txt  setup.cfg  setup.py  test_api.txt
Obsolete/: pyproject.toml
SpaceAndTime/: main.py
SpaceTimeComplex/: __init__.py  main.py
TimeComplex/: main.py
about/: index.html
docs/: about.md  docs.md  index.html  index.md
rlmach/: pyvenv.cfg
rlmach/Scripts/: activate  activate.bat
timeAndSpace/: mkdocs.yml
timeAndSpace/docs/: about.md
